wrapped scroll bar content shifting fix in media query

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -28,10 +28,11 @@ $font-secondary-reg: 'plex-reg';
 /* Base 
 /* ++++++++++++++++++++++++++++++++++++++++++++++ */
 
-html {
-  margin-left: calc(100vw - 100%);
-  margin-right: 0;
-} // stops scroll bar from shifting content
+@media screen and (min-width: 900px) {
+  html {
+    margin-left: calc(100vw - 100%);
+  } // stops scroll bar from shifting content
+}
 
 html, body {
   padding: 0;
